[package]
name = "tey"
description = "Tey - Fast open source Slack desktop app, written in Rust and React-QML"
version = "0.0.1"
authors = ["Long Nguyen <long@podzim.co>"]
build = "build.rs"

[dependencies]
qmetaobject = "0.0.4"
cstr = "0.1.5"

[build-dependencies]
fs_extra = "1.1.0"

[package.metadata.bundle]
name = "Tey"
identifier = "co.podzim.tey"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "0.0.1"
copyright = "Copyright (c) Long Nguyen 2019. All rights reserved."
category = "Business"
short_description = "Tey - Fast open source Slack desktop app, written in Rust and React-QML"
